0.0
---

- Initial version.

### Issue Fixes
* [#13](https://github.com/upfrontsystems/izinto-angular/issues/13) add variable model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add collection model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add dashboards in collections reorder
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add pasting dashboards and collections
* [#17](https://github.com/upfrontsystems/izinto-angular/issues/17) add single stat
* [#19](https://github.com/upfrontsystems/izinto-angular/issues/19) add reorder to chart