@@ -10,3 +10,4 @@
 * [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add pasting dashboards and collections
 * [#17](https://github.com/upfrontsystems/izinto-angular/issues/17) add single stat
 * [#19](https://github.com/upfrontsystems/izinto-angular/issues/19) add reorder to chart
+* [#20](https://github.com/upfrontsystems/izinto-angular/issues/20) add data source
